--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -21,7 +21,7 @@
             </svg>
             BBM
         </a>
-        {% if username == '-1' %}
+        {% if username == None %}
             <a class="navbar-brand mx-auto" href="#" style="color: white;">Войти</a>
         {% else %}
             <a class="navbar-brand mx-auto" href="#" style="color: white;">{{ username }}</a>
