--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -70,6 +70,7 @@
             <div style="width: 25rem;">
                 <img src="{% static 'exam_testing/cse1.jpg' %}" class="card-img-top">
                 <div align="center">
+                    <br>
                     <h5 class="card-title">Пройти тест по информатике</h5>
                     <p class="card-text">Подготовка к экзамену у Абрамского - Информатика 2 семестр, 1 курс</p>
 
@@ -119,7 +120,7 @@
             {% else %}
 
                 <div class="card" style="width: 18rem;">
-                    <img src="imgs/progrs.jpg" class="card-img-top" alt="..." style="border: 1px solid #767675;">
+                    <img src="{% static "exam_testing/progrs.jpg" %}" class="card-img-top" alt="..." style="border: 1px solid #767675;">
                     <div class="card-body">
                         <p class="card-text">Каждый пользователь может видеть здесь свой прогресс. Для того, чтобы посмотреть свой прогресс - войдите.</p>
                     </div>
