--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar bg-light">
     <div class="container-fluid" style="background-color: #4169E1;">
-        <a class="navbar-brand mx-auto" href="#" style="color: white;">
+        <a class="navbar-brand mx-auto" href="/" style="color: white;">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
                  viewBox="0 1 16 16">
                 <path
@@ -23,11 +23,11 @@
             </svg>
             BBM
         </a>
-        {% if username == None %}
-            <a class="navbar-brand mx-auto" href="#" style="color: white;">Войти</a>
+        {% if not request.user.is_authenticated %}
+            <a class="navbar-brand mx-auto" href="/login/" style="color: white;">Войти</a>
         {% else %}
-            <a class="navbar-brand mx-auto" href="#" style="color: white;">{{ username }}</a>
-            <a class="navbar-brand mx-auto" href="#">
+            <a class="navbar-brand mx-auto" href="/" style="color: white;">{{ request.user.username }}</a>
+            <a class="navbar-brand mx-auto" href="/logout/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-box-arrow-right" viewBox="0 2 16 16">
                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
                     <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
@@ -74,7 +74,7 @@
                     <h5 class="card-title">Пройти тест по информатике</h5>
                     <p class="card-text">Подготовка к экзамену у Абрамского - Информатика 2 семестр, 1 курс</p>
 
-                    {% if username == None %}
+                    {% if not request.user.is_authenticated %}
                         <a class="btn btn-primary disabled" aria-disabled="true" role="button" data-bs-toggle="button"
                            style="width: 50%;" href="">ТЕСТ</a>
                     {% else %}
@@ -93,7 +93,7 @@
             </div>
             <br>
 
-            {% if username != None %}
+            {% if request.user.is_authenticated %}
 
                 <div class="progress" style="width: 70%;">
                     <div class="progress-bar" role="progressbar" style="width: {{ self_progr }}%;" aria-valuenow="{{ self_progr }}" aria-valuemin="0"
