--- a/exam_testing/templates/exam_testing/password_recovery_startpage.html
+++ b/exam_testing/templates/exam_testing/password_recovery_startpage.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Восстановление пароля</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar bg-light">
     <div class="container-fluid" style="background-color: #4169E1;">
-      <a class="navbar-brand mx-auto" href="#" style="color: white;">
+      <a class="navbar-brand mx-auto" href="/" style="color: white;">
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
              viewBox="0 1 16 16">
           <path
@@ -20,6 +20,9 @@
       <a class="navbar-brand mx-auto" href="/login/" style="color: white;">Войти</a>
     </div>
   </nav>
+  <br/>
+  <br/>
+  <br/>
   <br/>
   <br/>
   <br/>
