--- a/exam_testing/templates/exam_testing/test.html
+++ b/exam_testing/templates/exam_testing/test.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar bg-light">
         <div class="container-fluid" style="background-color: #4169E1;">
-            <a class="navbar-brand mx-auto" href="#" style="color: white;">
+            <a class="navbar-brand mx-auto" href="/" style="color: white;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
                     viewBox="0 1 16 16">
                     <path
