--- a/exam_testing/templates/exam_testing/headpage_anon.html
+++ b/exam_testing/templates/exam_testing/headpage_anon.html
@@ -23,14 +23,7 @@
             </svg>
             BBM
         </a>
-
-        <a class="navbar-brand mx-auto" href="/" style="color: white;">{{ request.user.username }}</a>
-        <a class="navbar-brand mx-auto" href="/logout/">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-box-arrow-right" viewBox="0 2 16 16">
-                <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-            </svg>
-        </a>
+        <a class="navbar-brand mx-auto" href="/login/" style="color: white;">Войти</a>
     </div>
 </nav>
 
@@ -71,7 +64,7 @@
                     <h5 class="card-title">Пройти тест по информатике</h5>
                     <p class="card-text">Подготовка к экзамену у Абрамского - Информатика 2 семестр, 1 курс</p>
 
-                    <a class="btn btn-primary" aria-disabled="false" role="button" data-bs-toggle="button"
+                    <a class="btn btn-primary disabled" aria-disabled="true" role="button" data-bs-toggle="button"
                        style="width: 50%;" href="">ТЕСТ</a>
 
                 </div>
@@ -85,28 +78,13 @@
             </div>
             <br>
 
-            <div class="progress" style="width: 70%;">
-                <div class="progress-bar" role="progressbar" style="width: {{ self_progr }}%;" aria-valuenow="{{ self_progr }}" aria-valuemin="0"
-                     aria-valuemax="100">{{ self_progr }}%</div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="{% static "exam_testing/progrs.jpg" %}" class="card-img-top" alt="..." style="border: 1px solid #767675;">
+                <div class="card-body">
+                    <p class="card-text">Каждый пользователь может видеть здесь свой прогресс. Для того, чтобы посмотреть свой прогресс - войдите.</p>
+                </div>
             </div>
-
-            <br>
-            <div data-bs-spy="scroll" style="overflow: auto; ;width: 75%; height: 400px;" data-bs-target="#navbar-example2"
-                 data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-
-                {% for elm in list_of_user_tests %}
-                    <div class="card" style="width: 18rem;" align="left">
-                        <div class="card-body">
-
-                            <h6 class="card-subtitle mb-1 text-muted">Тест №{{ elm.0 }}: {{ elm.1 }}/{{ elm.2 }}</h6>
-                            <p class="card-text">{{ elm.3.day }}.{{ elm.3.month }}.{{ elm.3.year }} {{ elm.3.hour }}:{{ elm.3.minute }}</p>
-                            <a href="#" class="card-link">Подробнее</a>
-                        </div>
-                    </div>
-
-                {% endfor %}
-            </div>
-
 
         </div>
 
@@ -135,9 +113,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 
 <!-- Пакет JavaScript с Popper -->
