+ question generation and template(my version) + admin pages

--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -78,8 +78,7 @@
                         <a class="btn btn-primary disabled" aria-disabled="true" role="button" data-bs-toggle="button"
                            style="width: 50%;" href="">ТЕСТ</a>
                     {% else %}
-                        <a class="btn btn-primary" aria-disabled="false" role="button" data-bs-toggle="button"
-                           style="width: 50%;" href="">ТЕСТ</a>
+                        <a type="button" class="btn btn-primary" style="width: 50%;" href="/exam/test/">ТЕСТ</a>
                     {% endif %}
 
                 </div>
