--- a/exam_testing/templates/exam_testing/test.html
+++ b/exam_testing/templates/exam_testing/test.html
@@ -6,146 +6,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Тест №5</title>
+    <title>Тест {{ test_num }}</title>
 </head>
 
 <body>
-    <nav class="navbar bg-light">
-        <div class="container-fluid" style="background-color: #4169E1;">
-            <a class="navbar-brand mx-auto" href="/" style="color: white;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
-                    viewBox="0 1 16 16">
-                    <path
-                        d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+<nav class="navbar bg-light">
+    <div class="container-fluid" style="background-color: #4169E1;">
+        <a class="navbar-brand mx-auto" href="/" style="color: white;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
+                 viewBox="0 1 16 16">
+                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+            </svg>
+            BBM
+        </a>
+        {% if not request.user.is_authenticated %}
+            <a class="navbar-brand mx-auto" href="/login/" style="color: white;">Войти</a>
+        {% else %}
+            <a class="navbar-brand mx-auto" href="/" style="color: white;">{{ request.user.username }}</a>
+            <a class="navbar-brand mx-auto" href="/logout/">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-box-arrow-right" viewBox="0 2 16 16">
+                    <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                    <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
                 </svg>
-                BBM
             </a>
-            <a class="navbar-brand mx-auto" href="#" style="color: white;">Войти</a>
-        </div>
-    </nav>
+        {% endif %}
+    </div>
+</nav>
 
-    <div class="container">
-
-        <div class="row" style="height:55px;margin-left: 48%;margin-top: 1%;">
-            <h3>Тест №5</h3>
-        </div>
-
-        <div class="row">
-            <div class="col-3" style="text-align: left;">
-
-                <div id="list-example" class="list-group" style="width:18%;position: fixed;">
-                    <a class="list-group-item list-group-item-action" href="#list-item-1">Вопрос 1</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-2">Вопрос 2</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-3">Вопрос 3</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-4">Вопрос 4</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-5">Вопрос 5</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-6">Вопрос 6</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-7">Вопрос 7</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-8">Вопрос 8</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-9">Вопрос 9</a>
-                </div>
+<div class="container">
+    <div class="row" style="height:55px;margin-left: 48%;margin-top: 1%;">
+        <h3>Тест {{ test_num }}</h3>
+    </div>
+    <div class="row">
+        <div class="col-3" style="text-align: left;">
+            <div id="list-example" class="list-group" style="width:18%;position: fixed;">
+                <a class="list-group-item list-group-item-action" href="#list-item-1">Вопрос 1</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-2">Вопрос 2</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-3">Вопрос 3</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-4">Вопрос 4</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-5">Вопрос 5</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-6">Вопрос 6</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-7">Вопрос 7</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-8">Вопрос 8</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-9">Вопрос 9</a>
             </div>
+        </div>
 
-            <div class="col">
-                <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true"
-                    class="scrollspy-example" tabindex="0">
-
-                    <form method="GET" action="" id="myform"></form>
-
-                    <div id="list-item-1" class="card" style="width: 90%;margin-bottom: 8px;">
+        <div class="col">
+            <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true"
+                 class="scrollspy-example" tabindex="0">
+                <form method="GET" action="" id="myform"></form>
+                {% for num, question, question_answers in test_questions %}
+                    <div id="list-item-{{ num }}" class="card" style="width: 90%;margin-bottom: 8px;">
                         <div class="card-body">
-                            <h5 class="card-title">Вопрос 1</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis libero
-                                erat, maximus a urna et, consequat sollicitudin massa. In hendrerit lorem ut aliquet
-                                tempus. Sed ut vehicula orci. Aliquam hendrerit mi sit amet massa venenatis eleifend.
-                                Suspendisse ex sapien, placerat sed risus id, mollis eleifend elit. Cras volutpat
-                                sodales ligula, volutpat dignissim dolor pulvinar ut. Nunc hendrerit ligula enim, id
-                                tristique arcu porttitor non. Sed vel varius leo. Sed accumsan, magna eget iaculis
-                                dignissim, est metus posuere ex, at rhoncus arcu odio vitae justo. Morbi nec libero
-                                dignissim, blandit ex imperdiet, lobortis nunc. Suspendisse imperdiet consectetur augue,
-                                a pulvinar est fermentum interdum. Donec ut facilisis libero. Curabitur non eros eu arcu
-                                accumsan varius ut at sem. Etiam luctus ac augue ac tincidunt. Lorem ipsum dolor sit
-                                amet, consectetur adipiscing elit. Nullam dictum placerat ex id congue.
-
-                                Aenean euismod porta mauris, eu blandit neque laoreet in. Aenean sodales elit nec turpis
-                                vehicula, sit amet hendrerit urna faucibus. Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Praesent accumsan sit amet nisi et tempor. Donec arcu turpis, tempus
-                                non leo nec, bibendum tristique orci. Vestibulum dolor ante, aliquet sed gravida non,
-                                tempus dapibus arcu. Praesent dictum accumsan ante quis gravida. Praesent nec ipsum in
-                                tortor bibendum placerat in vitae ligula. Vestibulum semper id mauris eu viverra.</p>
-
-
-                            <div class="form-check mb-1">
-                                <input class="form-check-input" type="checkbox" id="flexCheckDefault" form="myform"
-                                    name="q_1" value="ans_id_1">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Вариант ответа такой-то
-                                </label>
-                            </div>
-
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" id="flexCheckDefault" form="myform"
-                                    name="q_1" value="ans_id_2">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Вариант ответа такой-то
-                                </label>
-                            </div>
-
+                            <h5 class="card-title">Вопрос {{ num }}</h5>
+                            <p class="card-text">{{ question.text }}</p>
+                            {% for question_answer in question_answers %}
+                                <div class="form-check mb-{% if num != 9 %}1{% else %}2{% endif %}">
+                                    <input class="form-check-input" type="checkbox" id="flexCheckDefault" form="myform"
+                                           name="q_{{ num }}" value="ans_id_{{ num }}">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        {{  question_answer.text }}
+                                    </label>
+                                </div>
+                            {% endfor %}
                         </div>
                     </div>
-
-                    <div id="list-item-2" class="card" style="width: 90%;margin-bottom: 8px;">
-                        <div class="card-body">
-                            <h5 class="card-title">Вопрос 2</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis libero
-                                erat, maximus a urna et, consequat sollicitudin massa. In hendrerit lorem ut aliquet
-                                tempus. Sed ut vehicula orci. Aliquam hendrerit mi sit amet massa venenatis eleifend.
-                                Suspendisse ex sapien, placerat sed risus id, mollis eleifend elit. Cras volutpat
-                                sodales ligula, volutpat dignissim dolor pulvinar ut. Nunc hendrerit ligula enim, id
-                                tristique arcu porttitor non. Sed vel varius leo. Sed accumsan, magna eget iaculis
-                                dignissim, est metus posuere ex, at rhoncus arcu odio vitae justo. Morbi nec libero
-                                dignissim, blandit ex imperdiet, lobortis nunc. Suspendisse imperdiet consectetur augue,
-                                a pulvinar est fermentum interdum. Donec ut facilisis libero. Curabitur non eros eu arcu
-                                accumsan varius ut at sem. Etiam luctus ac augue ac tincidunt. Lorem ipsum dolor sit
-                                amet, consectetur adipiscing elit. Nullam dictum placerat ex id congue.
-
-                                Aenean euismod porta mauris, eu blandit neque laoreet in. Aenean sodales elit nec turpis
-                                vehicula, sit amet hendrerit urna faucibus. Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Praesent accumsan sit amet nisi et tempor. Donec arcu turpis, tempus
-                                non leo nec, bibendum tristique orci. Vestibulum dolor ante, aliquet sed gravida non,
-                                tempus dapibus arcu. Praesent dictum accumsan ante quis gravida. Praesent nec ipsum in
-                                tortor bibendum placerat in vitae ligula. Vestibulum semper id mauris eu viverra.</p>
-
-
-                            <div class="form-check mb-1">
-                                <input class="form-check-input" type="checkbox" id="flexCheckDefault" form="myform"
-                                    name="q_2" value="ans_id_3">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Вариант ответа такой-то
-                                </label>
-                            </div>
-
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" id="flexCheckDefault" form="myform"
-                                    name="q_2" value="ans_id_4">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Вариант ответа такой-то
-                                </label>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <input style="margin-left: 38%;margin-top: 2%;margin-bottom: 8%;width: 15%;" type="submit"
-                        value="Отправить" form="myform" class="btn btn-primary">
-                </div>
+                {% endfor %}
+                <input style="margin-left: 38%;margin-top: 2%;margin-bottom: 8%;width: 15%;" type="submit"
+                       value="Отправить" form="myform" class="btn btn-primary">
             </div>
         </div>
     </div>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
-
 </html>
