--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -24,7 +24,7 @@
             BBM
         </a>
 
-        <a class="navbar-brand mx-auto" href="/" style="color: white;">{{ request.user.username }}</a>
+        <a class="navbar-brand mx-auto" href="/" style="color: white;">{{ username }}</a>
         <a class="navbar-brand mx-auto" href="/logout/">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-box-arrow-right" viewBox="0 2 16 16">
                 <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
@@ -46,13 +46,13 @@
             <div data-bs-spy="scroll" style="overflow: auto;width: 75%; height: 450px;" data-bs-target="#navbar-example2"
                  data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
 
-                {% for elem in list_elems %}
+                {% for test in last_tests %}
 
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
-                            <h6 class="card-subtitle mb-1 text-muted"><b>{{ elem.0 }}</b> - попытка №{{elem.1}}: {{ elem.2 }}/{{ elem.3 }}</h6>
-                            <p class="card-text">Прогресс {{ elem.4 }}%<br>
-                                {{elem.5.day}}.{{elem.5.month}}.{{elem.5.year}} {{elem.5.hour}}:{{elem.5.minute}}
+                            <h6 class="card-subtitle mb-1 text-muted"><b>{{ test.user.username }}</b> - попытка №{{test.num}}: {{ test.count_of_done }}/{{ test.questions_count }}</h6>
+                            <p class="card-text">Прогресс {{ test.user.progress }}%<br>
+                                {{test.finish_date.day}}.{{test.finish_date.month}}.{{test.finish_date.year}} {{test.finish_date.hour}}:{{test.finish_date.minute}}
                             </p>
                         </div>
                     </div>
@@ -94,12 +94,12 @@
             <div data-bs-spy="scroll" style="overflow: auto; ;width: 75%; height: 400px;" data-bs-target="#navbar-example2"
                  data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
 
-                {% for elm in list_of_user_tests %}
+                {% for test in user_tests %}
                     <div class="card" style="width: 18rem;" align="left">
                         <div class="card-body">
 
-                            <h6 class="card-subtitle mb-1 text-muted">Тест №{{ elm.0 }}: {{ elm.1 }}/{{ elm.2 }}</h6>
-                            <p class="card-text">{{ elm.3.day }}.{{ elm.3.month }}.{{ elm.3.year }} {{ elm.3.hour }}:{{ elm.3.minute }}</p>
+                            <h6 class="card-subtitle mb-1 text-muted">Тест №{{ test.num }}: {{ test.count_of_done }}/{{ test.questions_count }}</h6>
+                            <p class="card-text">{{ test.finish_date.day }}.{{ test.finish_date.month }}.{{ test.finish_date.year }} {{ test.finish_date.hour }}:{{ test.finish_date.minute }}</p>
                             <a href="#" class="card-link">Подробнее</a>
                         </div>
                     </div>
