--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -71,8 +71,8 @@
                     <h5 class="card-title">Пройти тест по информатике</h5>
                     <p class="card-text">Подготовка к экзамену у Абрамского - Информатика 2 семестр, 1 курс</p>
 
-                    <a class="btn btn-primary" aria-disabled="false" role="button" data-bs-toggle="button"
-                       style="width: 50%;" href="">ТЕСТ</a>
+                    <a class="btn btn-primary" type="button"
+                       style="width: 50%;" href="exam/">ТЕСТ</a>
 
                 </div>
             </div>
