+relate to test/ in headpage

--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -72,7 +72,7 @@
                     <p class="card-text">Подготовка к экзамену у Абрамского - Информатика 2 семестр, 1 курс</p>
 
                     <a class="btn btn-primary" type="button"
-                       style="width: 50%;" href="exam/">ТЕСТ</a>
+                       style="width: 50%;" href="test/">ТЕСТ</a>
 
                 </div>
             </div>
