+ready to merge

--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -87,8 +87,10 @@
 
             <div class="progress" style="width: 70%;">
                 <div class="progress-bar" role="progressbar" style="width: {{ self_progr }}%;" aria-valuenow="{{ self_progr }}" aria-valuemin="0"
-                     aria-valuemax="100">{{ self_progr }}%</div>
+                     aria-valuemax="100"></div>
+                <div style="margin-left: 49%">{{ self_progr }}%</div>
             </div>
+
 
             <br>
             <div data-bs-spy="scroll" style="overflow: auto; ;width: 75%; height: 400px;" data-bs-target="#navbar-example2"
