--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -102,7 +102,7 @@
 
                             <h6 class="card-subtitle mb-1 text-muted">Тест №{{ test.num }}: {{ test.count_of_done }}/{{ test.questions_count }}</h6>
                             <p class="card-text">{{ test.start_date.day }}.{{ test.start_date.month }}.{{ test.start_date.year }} {{ test.start_date.hour }}:{{ test.start_date.minute }}</p>
-                            <a href="#" class="card-link">Подробнее</a>
+                            <a href="/results/test.id/" class="card-link">Подробнее</a>
                         </div>
                     </div>
 
