--- a/exam_testing/templates/exam_testing/headpage.html
+++ b/exam_testing/templates/exam_testing/headpage.html
@@ -19,8 +19,7 @@
             <a class="navbar-brand mx-auto" href="/" style="color: white;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
                      viewBox="0 1 16 16">
-                    <path
-                            d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+                    <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
                 </svg>
                 BBM
             </a>
@@ -54,8 +53,8 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h6 class="card-subtitle mb-1 text-muted"><b>{{ test.user.username }}</b> - попытка №{{test.num}}: {{ test.count_of_done }}/9</h6>
-                            <p class="card-text">Прогресс {{ test.user.progress }}%<br>
-                                {{test.start_date.day}}.{{test.start_date.month}}.{{test.start_date.year}} {{test.start_date.hour}}:{{test.start_date.minute}}
+                            <p class="card-text">Прогресс {{ test.progress }}%<br>
+                                {{ test.start_date|date:"j.n.y" }} {{ test.start_date|time:"H:i" }}
                             </p>
                         </div>
                     </div>
@@ -88,12 +87,9 @@
             </div>
             <br>
 
-            <div class="progress" style="width: 70%;">
-                <div class="progress-bar" role="progressbar" style="width: {{ self_progr }}%;" aria-valuenow="{{ self_progr }}" aria-valuemin="0"
-                     aria-valuemax="100"></div>
-                <div style="margin-left: 49%">{{ self_progr }}%</div>
+            <div class="progress" style="width: 70%">
+                <div class="progress-bar" role="progressbar" style="width: {{ self_progr }}%;" aria-valuenow="{{ self_progr }}" aria-valuemin="0" aria-valuemax="100">{{ self_progr }}%</div>
             </div>
-
 
             <br>
             <div data-bs-spy="scroll" style="overflow: auto; ;width: 75%; height: 400px;" data-bs-target="#navbar-example2"
@@ -104,7 +100,7 @@
                         <div class="card-body">
 
                             <h6 class="card-subtitle mb-1 text-muted">Тест №{{ test.num }}: {{ test.count_of_done }}/9</h6>
-                            <p class="card-text">{{ test.start_date.day }}.{{ test.start_date.month }}.{{ test.start_date.year }} {{ test.start_date.hour }}:{{ test.start_date.minute }}</p>
+                            <p class="card-text">{{ test.start_date|date:"j.n.y" }} {{ test.start_date|time:"H:i" }}</p>
                             <a href="/results/{{ test.id }}/" class="card-link">Подробнее</a>
                         </div>
                     </div>
