--- a/exam_testing/templates/exam_testing/results.html
+++ b/exam_testing/templates/exam_testing/results.html
@@ -12,18 +12,17 @@
 <body>
 <nav class="navbar bg-light">
     <div class="container-fluid" style="background-color: #4169E1; height: 40px">
-        <div class="col" style="margin-left: 12%">
+        <div class="col" style="margin-left: 13%">
             <a class="navbar-brand mx-auto" href="/" style="color: white;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-book-half"
                      viewBox="0 1 16 16">
-                    <path
-                            d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+                    <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
                 </svg>
                 BBM
             </a>
         </div>
-        <div class="col-2">
-            <a class="navbar-brand mx-autox" href="/" style="color: white;">{{ username }}</a>
+        <div class="col-3" style="margin-right: -2%">
+            <a class="navbar-brand mx-autox" href="/" style="color: white;">{{ request.user.username }}</a>
             <a class="navbar-brand mx-auto" href="/logout/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-box-arrow-right" viewBox="0 2 16 16">
                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
@@ -33,7 +32,6 @@
         </div>
     </div>
 </nav>
-
 
 <div class="container">
 
@@ -65,17 +63,17 @@
                             <p class="card-text">
                                 {{question_text}}
                             </p>
-                            {% if question_result == "Верно"%}
-                            <button type="button" class="btn btn-success" disabled >{{question_result}}</button>
-                            {% elif question_result == "Частично верно"%}
-                            <button type="button" class="btn btn-warning" disabled >{{question_result}}</button>
-                            {% elif question_result == "Неверно"%}
-                            <button type="button" class="btn btn-danger" disabled >{{question_result}}</button>
+                            {% if question_result == 2 %}
+                            <button type="button" class="btn btn-success" disabled >Верно</button>
+                            {% elif question_result == 1 %}
+                            <button type="button" class="btn btn-warning" disabled >Частично верно</button>
+                            {% elif question_result == 0 %}
+                            <button type="button" class="btn btn-danger" disabled >Неверно</button>
                             {% endif %}
                         </div>
                     </div>
                 {% endfor %}
-                <a style="margin-left: 38%;margin-top: 2%;margin-bottom: 8%;" href="/" type="button" form="myform" class="btn btn-primary">Вернуться в меню</a>
+                <a style="margin-left: 38%;margin-top: 2%;margin-bottom: 8%;" href="/" type="button" class="btn btn-primary">Вернуться в меню</a>
             </div>
         </div>
     </div>
