--- a/exam_testing/templates/exam_testing/headpage_anon.html
+++ b/exam_testing/templates/exam_testing/headpage_anon.html
@@ -93,22 +93,14 @@
     <div class="row" style="background-color: #F5F5F5;">
         <div>
             <h2 align="center">Инструкция</h2>
-            <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum
-                используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное
-                распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст..
-                Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют
-                Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
-                как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum
-                получил
-                много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
-            </p>
             <ol>
                 <li>Для прохождения теста - сначала авторизуйтесь</li>
                 <li>Когда будете готовы - нажмите "ТЕСТ"</li>
                 <li>Начнется попытка теста, по окончании теста - вы увидете свои результаты</li>
                 <li>Каждый новый тест обязательно содержит в себе ещё не решенные вами вопросы, ваша задача - закрыть все
                     вопросы</li>
-                <li>Свой прогресс вы сможете увидеть на панели вашего аккаунта</li>
+                <li>Свой прогресс вы сможете увидеть выше, также вы сможете повторно пересмотреть результаты любого из
+                    пройденных вами тестов</li>
             </ol>
         </div>
     </div>
